@@ -1,7 +1,5 @@
 package uk.gov.defra.tracesx.common.security;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
@@ -10,7 +8,7 @@ import org.springframework.stereotype.Component;
 public class RoleToAuthorityMapper {
 
   public List<GrantedAuthority> mapRoles(List<String> roles) {
-    return roles.stream().map(this::mapRole).collect(toList());
+    return roles.stream().map(this::mapRole).toList();
   }
 
   private GrantedAuthority mapRole(String role) {
